# ML4Agnet

./: .ceignore  .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  Dockerfile  IBM_CLOUD_DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  SCHEMA_CHANGES.md  SETUP.md  STATUS.md  STDIO_USAGE.md  WATSONX_ORCHESTRATE_INTEGRATION.md  WXO_CONFIGURATION.md  demand-forecasting-schema.json  deploy.sh  model_schemas.json  pyproject.toml  requirements.txt  test_deployed_records.py  test_mcp_prediction.py  test_mcp_schema.py  test_model_call.py  test_records_format.py  test_server.py
src/: __init__.py  __main__.py  config.py  http_server.py  registry.py  schema_manager.py  schema_ui.py  server.py  ui.py  unified_server.py
src/mcp/: __init__.py  tools.py
src/providers/: __init__.py  base.py  watsonx.py
